New function canType1BeInstanceOfType2 to broaden possible tokens that can go after "instanceof" token